# sftool-gui

./: .gitignore  .prettierignore  LICENCE  README.md  cliff.toml  eslint.config.js  flake.nix  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature-request.yml
.github/workflows/: build.yml  deploy-docs.yml  pr-checks.yml
docs/: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docs/src/: README.md
nix/: sftool-gui.nix
scripts/: chip-support-test.js  connection-flow-test.js  get-version.js  i18n-check.js  release-artifact-workflow-test.js  update-version.js  version-manager.js
src/: App.vue  index.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  log-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: archive.rs  config.rs  device.rs  flash.rs  mass_production.rs  mod.rs
src-tauri/src/progress/: mod.rs  tauri_callback.rs
src-tauri/src/state/: app_state.rs  mass_production_state.rs  mod.rs
src-tauri/src/types/: config.rs  device.rs  flash.rs  mass_production.rs  mod.rs  progress.rs  stub_config_spec.rs
src-tauri/src/utils/: mod.rs  serial_ports.rs  stub_ops.rs  tool_factory.rs  validator.rs
src/components/: DeviceConnection.vue  FlashFileCard.vue  LogFloatingButton.vue  LogWindow.vue  Navbar.vue  ReadTaskCard.vue
(+75 files in other folders)
