[package]
name = "sftool"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sftool_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-opener = "=2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "=2.4.2"
tauri-plugin-updater = "=2.10.1"
serialport = "4.9"
nusb = "0.2.3"
futures-lite = "2"
sftool-lib = { path = "../../sftool/sftool-lib" }
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-fs = "=2.5.0"
tauri-plugin-process = "=2.3.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking"] }
tempfile = "3.17.1"
unarc-rs = "0.6.0"
walkdir = "2"
chrono = "0.4"
